[metadata]
name = era5_tools
#version = attr: my_package.VERSION
description = Tools for downloading ERA5 data with CDSAPI
long_description = file: README.md

[options]
install_requires =
    numpy
    cdsapi
package_dir=
    =src
packages=find:
python_requires = >=3.7

[options.packages.find]
where=src
